--- a/style.css
+++ b/style.css
@@ -773,11 +773,10 @@ h4 {
 .bgc-atomic-tangerine {
     background-color: #F3976C;
 }
-
 .tc-white {
-    color: #F3976C!important;
+    color:black!important;
+    font-size: revert;
 }
-
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #FFFFFF!important;
