--- a/style.css
+++ b/style.css
@@ -817,7 +817,7 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/la-chouette-agence-banniere.jpg");
+    background-image: url("../img_compressée/la-chouette-agence-banniere.jpg");
 }
 
 .bg-presentation {
