--- a/style.css
+++ b/style.css
@@ -774,7 +774,7 @@ h4 {
     background-color: #F3976C;
 }
 .tc-white {
-    color:black!important;
+    color:#F3976C!important;
     font-size: revert;
 }
 .btn-atomic-tangerine {
