--- a/style.css
+++ b/style.css
@@ -809,7 +809,7 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+    background-image: url("../img_compressée/dots-bg.png");
 }
 
 .bg-lines-h2-bg {
