--- a/style.css
+++ b/style.css
@@ -809,15 +809,15 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("../img_compressée/dots-bg.png");
+    background-image: url("img_compressée/dots-bg.png");
 }
 
 .bg-lines-h2-bg {
-    background-image: url("../img_compressée/lines-h2-bg.png");
+    background-image: url("img_compressée/lines-h2-bg.png");
 }
 
 .bg-banniere {
-    background-image: url("../img_compressée/la-chouette-agence-banniere.jpg");
+    background-image: url("img_compressée/la-chouette-agence-banniere.jpg");
 }
 
 .bg-presentation {
