--- a/style.css
+++ b/style.css
@@ -321,7 +321,10 @@ a:hover {
     float: right;
     z-index: 1;
 }
-
+.site-navigation nav navbar-nav {
+    margin-right:100px;
+    float: right;
+}
 .nav > li {
     float: left;
     margin-top: 4px;
