--- a/style.css
+++ b/style.css
@@ -321,14 +321,13 @@ a:hover {
     float: right;
     z-index: 1;
 }
-.site-navigation nav navbar-nav {
-    margin-right:100px;
-    float: right;
-}
+
 .nav > li {
     float: left;
     margin-top: 4px;
     font-size: 16px;
+    margin-right:4em;
+    list-style: none;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
