test couleur contraste titre

--- a/style.css
+++ b/style.css
@@ -779,7 +779,7 @@ h4 {
     font-size: revert;
 }
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #edba02;
     color: #FFFFFF!important;
 }
 
