--- a/style.css
+++ b/style.css
@@ -775,7 +775,7 @@ h4 {
     background-color: #F3976C;
 }
 .tc-white {
-    color:#F3976C!important;
+    color:white!important;
     font-size: revert;
 }
 .btn-atomic-tangerine {
