--- a/style.css
+++ b/style.css
@@ -780,12 +780,12 @@ h4 {
 }
 .btn-atomic-tangerine {
     background: #edba02;
-    color: #FFFFFF!important;
+    color: black!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
+    background: black!important;
+    color: #edba02!important;
 }
 
 .ltc-white {
