--- a/style.css
+++ b/style.css
@@ -98,10 +98,10 @@ a:hover {
 .b-parallax {
     background-attachment: fixed;
 }
-
+/*
 .d-bloc {
     color: rgba(255, 255, 255, .7);
-}
+}*/
 
 .d-bloc button:hover {
     color: rgba(255, 255, 255, .9);
@@ -771,9 +771,7 @@ h4 {
     background-color: #364577;
 }
 
-.bgc-atomic-tangerine {
-    background-color: #F3976C;
-}
+
 .tc-white {
     color:white!important;
     font-size: revert;
