--- a/style.css
+++ b/style.css
@@ -772,6 +772,9 @@ h4 {
     background-color: #364577;
 }
 
+.bgc-atomic-tangerine {
+    background-color: #edba02;
+}
 
 .tc-white {
     color:white!important;
