--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img_compressée/texture-paper.png");
+    background: url("img_webp/AnyConv.com__texture-paper.webp");
     background-size: 280px 280px;
 }
 
